# skillpill

./: README.md  findings.md  progress.md  pyproject.toml  task_plan.md
datasets/examples/: github_skill_example.formatted.jsonl
examples/: README.md  github_skill_README.md  github_skill_example.md  github_skill_tool.py  weather_tool.py
src/skillpill/: __init__.py
src/skillpill/forge/: __init__.py  extractor.py  formatter.py  generator.py  models.py  prompts.py
